--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,15 +22,17 @@ jobs:
           config_timezone: Europe/Moscow
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
+          
           plugin_languages: yes
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 365
+          plugin_languages_recent_categories: programming
+          plugin_languages_recent_days: 0
           plugin_languages_recent_load: 1000
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_threshold: 1%
+          
           plugin_lines: yes
           plugin_repositories: 100
           
