--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,11 @@ jobs:
           plugin_languages_sections: most-used, recently-used
           plugin_languages_threshold: 1%
           
+          plugin_habits: yes
+          plugin_habits_days: 365
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          
           plugin_lines: yes
           plugin_repositories: 100
           
