--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
           user: glebosotov
           template: classic
           base: header, activity, community, metadata
+          config_display: large
           config_timezone: Europe/Moscow
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
