--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{cron: "0 */3 * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: {branches: ["master"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -21,37 +21,39 @@ jobs:
           base: header, activity, community, metadata
 #           config_display: large
           config_timezone: Europe/Moscow
+          
+          
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_isocalendar_duration: full-year
+          
+          
+          plugin_repositories: 100
+          plugin_repositories_affiliations: owner
+          plugin_repositories_batch: 100
+          plugin_repositories_featured: sfwalls-script, evolution-image-generation
+          
           
           plugin_languages: yes
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_limit: 8
+          plugin_languages_limit: 10
           plugin_languages_recent_categories: programming
           plugin_languages_recent_days: 0
           plugin_languages_recent_load: 1000
           plugin_languages_sections: most-used, recently-used
           plugin_languages_threshold: 1%
           
+          
           plugin_habits: yes
           plugin_habits_days: 365
           plugin_habits_facts: yes
           plugin_habits_from: 200
           plugin_habits_charts: yes  
-          
-#           plugin_lines: yes
-          plugin_repositories: 100
-          
-          plugin_repositories_affiliations: owner
-          plugin_repositories_batch: 100
-          plugin_repositories_featured: sfwalls-script, evolution-image-generation
-          
+        
           
           plugin_achievements: yes
           plugin_achievements_threshold: B       # Display achievements with rank B or higher
           plugin_achievements_secrets: yes       # Display unlocked secrets achievements
-#           plugin_achievements_ignored: octonaut  # Hide octonaut achievement
           plugin_achievements_limit: 0           # Display all unlocked achievement matching threshold and secrets params
           plugin_achievements_display: detailed   # Use compact display
           
@@ -59,7 +61,7 @@ jobs:
           plugin_music: yes
           plugin_music_provider: spotify # Use Spotify as provider
           plugin_music_mode: recent      # Set plugin mode
-          plugin_music_limit: 4          # Limit to 4 entries
+          plugin_music_limit: 2          # Limit to 4 entries
           plugin_music_played_at: yes    # Show timestamp (for spotify only)
           plugin_music_token: "${{ secrets.SPOTIFY_CLIENT_ID }}, ${{ secrets.SPOTIFY_CLIENT_SECRET }}, ${{ secrets.SPOTIFY_REFRESH_TOKEN }}"
 
