--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           # Options
           user: glebosotov
           template: classic
-          base: header, activity, community, metadata
+          base: header
 #           config_display: large
           config_timezone: Europe/Moscow
           
